<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_weight="1">
	<TableLayout
		android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:shrinkColumns="1" 
    	android:fadingEdge="vertical" 
    	android:fadingEdgeLength="5px">
    	<TextView
    		android:text="About This App"
    		android:gravity="center"
    		android:padding="5px"/>
		<TableRow>
			<TextView
				android:text="Version Info:"
				android:padding="5px"/>
			<TextView
				android:text="@string/version_info"
				android:padding="5px"
				android:gravity="right"/>
		</TableRow>
		<View
			android:layout_height="4dip"
			android:background="#FF909090"/>
	    <TextView
    		android:text="About This Developer"
   			android:gravity="center"
   			android:textSize="5pt"
 	   		android:padding="5px"/>
		<TableRow>
			<TextView
				android:text="Name:"
				android:textSize="5pt"
				android:padding="5px"/>
			<TextView
				android:text="@string/dev_name"
				android:textSize="5pt"
				android:padding="5px"
				android:gravity="right"/>
		</TableRow>
		<TableRow>
			<TextView
				android:text="E-mail:"
				android:textSize="5pt"
				android:padding="5px"/>
			<TextView
				android:id="@+id/devEmail"
				android:clickable="true"
				android:text="@string/dev_email"
				android:textSize="5pt"
				android:textColor="#83F52C"
				android:padding="5px"
				android:gravity="right"/>
		</TableRow>
		<TableRow>
			<TextView
				android:text="Phone:"
				android:textSize="5pt"
				android:padding="5px"/>
			<TextView
				android:id="@+id/devPhone"
				android:clickable="true"
				android:text="@string/dev_phone"
				android:textColor="#83F52C"
				android:textSize="5pt"
				android:padding="5px"
				android:gravity="right"/>
		</TableRow>
		<TableRow>
			<TextView
				android:text="Twitter:"
				android:textSize="5pt"
				android:padding="5px"/>
			<TextView
				android:text="@string/dev_twitter"
				android:textSize="5pt"
				android:padding="5px"
				android:gravity="right"/>
		</TableRow>
		<TableRow>
			<TextView
				android:text="Source:"
				android:textSize="5pt"
				android:padding="5px" />
			<TextView
				android:text="@string/dev_github"
				android:clickable="true"
    			android:textSize="5pt"
    			android:padding="5px"
    			android:textColor="#83F52C"
    			android:gravity="right"/>
			</TableRow>
		<View
			android:layout_height="4dip"
			android:background="#FF909090"/>
	    <TextView
    		android:text="Special Thanks"
    		android:gravity="center"
    		android:textSize="5pt"
    		android:padding="5px"/>
    	<TableRow android:layout_width="fill_parent">
	    	<TextView
    			android:text="Name:"
    			android:textSize="5pt"
    			android:padding="5px"/>
	    	<TextView
    			android:text="Keldon Jones"
    			android:textSize="5pt"
    			android:padding="5px"
	    		android:gravity="right"/>
    	</TableRow>
    	<TableRow android:layout_width="fill_parent">
    		<TextView
    			android:text="E-mail:"
    			android:textSize="5pt"
    			android:padding="5px"/>
    		<TextView
	    		android:text="keldon@keldon.net"
    			android:clickable="true"
    			android:textSize="5pt"
				android:textColor="#83F52C"
				android:padding="5px"
				android:gravity="right"/>
    	</TableRow>
    	<TableRow android:layout_width="fill_parent">
	    	<TextView
    			android:text="Website:"
    			android:textSize="5pt"
    			android:padding="5px"/>
    		<TextView
	    		android:text="http://keldon.net"
    			android:clickable="true"
    			android:textSize="5pt"
				android:textColor="#83F52C"
				android:padding="5px"
				android:gravity="right"/>
    	</TableRow>
    	<TextView
	    	android:text="@string/keldon_thanks"
    		android:textSize="5pt"
    		android:padding="5px" 
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"/>
    	<View
			android:layout_height="1dip"
			android:background="#FF909090"/>
		<TableRow android:layout_width="fill_parent">
	    	<TextView
    			android:text="Website:"
    			android:textSize="5pt"
    			android:padding="5px"/>
    		<TextView
	    		android:text="http://rockbandaide.com"
    			android:clickable="true"
    			android:textSize="5pt"
				android:textColor="#83F52C"
				android:padding="5px"
				android:gravity="right"/>
    	</TableRow>
    	<TableRow>
			<TextView
				android:text="Main Twitter:"
				android:textSize="5pt"
				android:padding="5px"/>
			<TextView
				android:text="@string/rba_twitter"
				android:textSize="5pt"
				android:padding="5px"
				android:gravity="right"/>
		</TableRow>
		<TableRow>
			<TextView
				android:text="RB/2 Twitter:"
				android:textSize="5pt"
				android:padding="5px"/>
			<TextView
				android:text="@string/rb_dlc_twitter"
				android:textSize="5pt"
				android:padding="5px"
				android:gravity="right"/>
		</TableRow>
		<TableRow>
			<TextView
				android:text="RBN DLC Twitter:"
				android:textSize="5pt"
				android:padding="5px"/>
			<TextView
				android:text="@string/rbn_dlc_twitter"
				android:textSize="5pt"
				android:padding="5px"
				android:gravity="right"/>
		</TableRow>
    	<TextView
	    	android:text="@string/rba_thanks"
    		android:textSize="5pt"
    		android:padding="5px" 
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"/>
	</TableLayout>
</ScrollView>