<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5px"
			android:text="@string/game_prompt" />
		<Spinner
			android:id="@+id/game_spinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/game_prompt" />
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5px"
			android:text="@string/instrument_prompt" />
		<Spinner
			android:id="@+id/instrument_spinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/instrument_prompt" />
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5px"
			android:text="@string/difficulty_prompt" />
		<Spinner
			android:id="@+id/difficulty_spinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/difficulty_prompt" />
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5px"
			android:text="@string/player_prompt" />
		<EditText
			android:id="@+id/playerName"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>
	<Button android:id="@+id/score_search_button"
		android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:layout_weight="1"
    	android:layout_marginTop="5px"
    	android:text="GO!" />	
</LinearLayout>
